--- a/src/assets/Login.scss
+++ b/src/assets/Login.scss
@@ -5,11 +5,11 @@
   @include respond-to(320px) {
     @include centralize-col;
     @include size(300px, 200px);
-    border: solid 1px $color-brand;
+    border: solid 1px $color-black;
     border-radius: 30px;
     padding: 20px 10px 0;
     background-color: $color-white-transparent;
-    box-shadow: 0px 0px 30px 10px $color-brand;
+    box-shadow: 0px 0px 30px 10px $color-black-transparent;
     &__title {
       text-align: center;
       font-family: $font-first;
@@ -42,15 +42,15 @@
       margin-bottom: 20px;
       border: solid 1px $color-brand;
       border-radius: 20px;
-      background-color: $color-brand-light;
+      background-color: $color-brand;
       color: $color-white;
       &:hover {
         outline: none;
-        background-color: $color-brand;
+        background-color: $color-brand-light;
       }
       &:focus {
         outline: none;
-        background-color: $color-brand;
+        background-color: $color-brand-light;
       }
     }
     &__text p {
