--- a/src/assets/variables/_vars.scss
+++ b/src/assets/variables/_vars.scss
@@ -1,10 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
 
-$color-brand: #2a133b;
+$color-brand: #4e2683;
 $color-brand-light: lighten($color-brand, 15%);
 $color-brand-dark: rgba($color-brand, 0.5);
 $color-white: #ffffff;
 $color-white-transparent: rgba($color-white, 0.3);
+$color-white-transparent-high: rgba($color-white, 0.7);
 $color-black: #000000;
 $color-black-transparent: rgba($color-black, 0.3);
+$color-grey: #171417;
+$color-grey-transparent: rgba($color-grey, 0.5);
 $font-first: "Montserrat", sans-serif;
