background color fixed

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -5,5 +5,5 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(90, 50, 120, 1);
+  background: #4e2683;
 }
