--- a/src/assets/Login.scss
+++ b/src/assets/Login.scss
@@ -1,10 +1,16 @@
 @import "./variables/vars";
 @import "./mixins/mixins";
 
+.layout {
+  @include size(100vh, 100%);
+  @include centralize-col();
+  background-color: $color-brand;
+}
+
 .login {
   @include respond-to(320px) {
-    @include centralize-col;
     @include size(300px, 200px);
+    @include centralize-col;
     border: solid 1px $color-black;
     border-radius: 30px;
     padding: 20px 10px 0;
@@ -20,7 +26,7 @@
       width: 150px;
     }
     &__form {
-      @include direction-col;
+      @include centralize-col;
       width: 120px;
       &--user {
         @include login-input;
@@ -35,8 +41,7 @@
       }
     }
     &__btn {
-      width: 100px;
-      height: 30px;
+      @include size(30px, 100px);
       font-size: 15px;
       padding-left: 10px;
       margin-bottom: 20px;
@@ -69,7 +74,6 @@
       width: 250px;
     }
     &__form {
-      @include direction-col;
       width: 200px;
       &--user {
         height: 30px;
@@ -79,8 +83,7 @@
       }
     }
     &__btn {
-      width: 150px;
-      height: 40px;
+      @include size(40px, 150px);
       font-size: 20px;
     }
     &__text p {
