--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,9 +1,16 @@
 body {
   margin: 0;
   width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #4e2683;
+  height: auto;
+  background: #e4e2e7;
+  position: relative;
+}
+
+.dark-mode {
+  background-image: url("https://i.imgur.com/UnSa7WE.jpg");
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
