--- a/src/assets/Login.scss
+++ b/src/assets/Login.scss
@@ -19,7 +19,7 @@
     &__title {
       text-align: center;
       font-family: $font-first;
-      color: $color-white;
+      color: $color-black;
       font-size: 18px;
     }
     &__title img {
@@ -48,7 +48,7 @@
       border: solid 1px $color-brand;
       border-radius: 20px;
       background-color: $color-brand;
-      color: $color-white;
+      color: $color-black;
       &:hover {
         outline: none;
         background-color: $color-brand-light;
@@ -62,7 +62,7 @@
       text-align: center;
       font-size: 11px;
       font-family: $font-first;
-      color: $color-white;
+      color: $color-black;
     }
   }
   @include respond-to(1000px) {
