--- a/src/assets/variables/_vars.scss
+++ b/src/assets/variables/_vars.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap");
 
-$color-brand: #16239b;
+$color-brand: #7a6f5f;
 $color-brand-light: lighten($color-brand, 15%);
 $color-brand-dark: rgba($color-brand, 0.7);
 $color-brand-transparent: rgba($color-brand, 0.2);
